<resources>
    <string name="app_name">KamusJawa</string>
	<string name="translating">Translating...</string>
	<string name="translator"><u>Translator</u></string>
	<string name="contact"><u>Kontak</u></string>
	<string name="other"><u>Other</u></string>
	<string name="result">Result :</string>
	<string name="notes">Notes :</string>
	<string name="share">Share</string>
	<string name="body_notes">Result :</string>
	<string name="java">Java letter :</string>
	<string name="action_about">About</string>
	<string name="action_whatsn">Whats New?</string>
	<string name="close">Close</string>
	<string name="back">Press once again!</string>
	<string name="search">Search</string>
    <string name="whatsn">Whats New?</string>
	<string name="whatsn_body"><![CDATA[
		<b>*<u>1.0.4</u></b><br/>
		- Material Design<br/>
		- Add a word<br/>
		- Fix bug
	   <br/>
	   <br/>
		<b>*<u>1.0.2</u></b><br/>
		- Initial release
	   ]]></string>
	<string name="action_share">Share</string>
	<string name="thanks_to">Thanks to :</string>
	<string name="text_hint">Input a word</string>
	<string name="about_body"><![CDATA[
	
		<br/>
	   Copyright © 2016 Ari Haryanto<br/>
	   ✉ ariharyanto067@gmail.com
        ]]></string>
	
</resources>
